--- a/index.html
+++ b/index.html
@@ -8,24 +8,37 @@
   
   <title>Frontend Mentor | Fylo data storage component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
+  <script src="https://kit.fontawesome.com/28d6b952f3.js" crossorigin="anonymous"></script>
+  
 </head>
 <body>
+  <main>
+    <div class="logo_section">
+      <img src="images/logo.svg">
+      <div class="icons">
+        <a href="#"><img src="images/icon-document.svg" alt="Document"></a>
+        <a href="#"><img src="images/icon-folder.svg" alt="Folder"></a>
+        <a href="#"><img src="images/icon-upload.svg" alt="Upload"></a>
+      </div>
+    </div>
 
-  You’ve used 815 GB of your storage
-   
-  185 GB Left
+    <div class="info_section">
+      <div class="left-info"><p><span>185</span> GB LEFT</p></div>
+      <div class="info">
+        <div class="storage-info"><p>You’ve used <span>815 GB</span> of your storage</p></div>
+        <div class="progress-bar"><i class="fas fa-circle"></i></div>
+        <p class="empty">0</p>
+        <p class="full">1000 GB</p>
+      </div>
+    </div>
+  </main>
   
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
+  <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Matas Valkūnas</a>.
+  </footer>
 </body>
 </html>
