--- a/index.html
+++ b/index.html
@@ -29,13 +29,19 @@
       <div class="left-info"><p><span>185</span> GB LEFT</p></div>
       <div class="info">
         <div class="storage-info"><p>You’ve used <span>815 GB</span> of your storage</p></div>
-        <div class="progress-bar"><i class="fas fa-circle"></i></div>
-        <p class="empty">0</p>
-        <p class="full">1000 GB</p>
+        <div class="progress-bar">
+          <div class="progress">
+            <div class="circle"></div>  
+          </div>
+                
+        </div>
+        <div class="scale">
+          <p class="empty">0</p>
+          <p class="full">1000 GB</p>
+        </div>
       </div>
     </div>
   </main>
-  
   <footer>
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Matas Valkūnas</a>.
